# xfm

./: BUILD  CMakeLists.txt  LICENSE  README
doc/: cover_art.im  license.im  logo.fig  master.mk
doc/lang_ref/: README  append_a.im  cd.im  cmds.im  cmdtab.im  doc_start.im  float_mar.im  gv_tab.im  headtab.im  ifroom.im  index_snatch.im  ixcmds.im  letter.xfm  lists.im  logo.eps  macros.im  mkfile  quickr.im  table.im  tcfig.im  test.xfm  trick_float.im  trick_fluff.im  trick_front.im  xfm.xfm  xfm_col_styles.fig  xfm_cover.im  xfm_fm_ex1.fig  xfm_page_top.fig  xfm_trick.xfm  zaptab.xfm
doc/tricks/: caution_tangle.fig  cover.im  index_snatch.im  mkfile  trick_basic.im  trick_float.im  trick_fluff.im  trick_front.im  trick_images.im  trick_indent.im  trick_line.im  trick_slides.im  trick_vars.im  xfm_trick.xfm
docker/: Dockerfile  README  build.ksh  master.mk  mkfile  xfm.ksh
examples/: README  float_mar.xfm  font.xfm  html_style.xfm  markdown.xfm  mix_col.xfm  mkfile  test_2x3.fig  two_col.xfm  two_pass.xfm
src/: BUILD  master.mk  mkfile
src/afileio/: CMakeLists.txt  afichain.c  aficlos1.c  aficlose.c  aficonst.h  afidefs.h  afigetto.c  afiisvar.c  afinew.c  afiopen.c  afiopenp.c  afipusht.c  afiread.c  afireadb.c  afireadn.c  afireadp.c  afiseek.c  afisetfl.c  afisetsi.c  afisetto.c  afisetup.h  afistat.c  afistruc.h  afiwrite.c  mkfile  parse.h  replace.c
src/base/: CMakeLists.txt  date.c  docindex.c  fmaddtok.c  fmasis.c  fmbd.c  fmbeglst.c  fmbox.c  fmbxend.c  fmbxst.c  fmcapture.c  fmccol.c  fmcd.c  fmceject.c  fmcenter.c  fmclose.c  fmcmd.c  fmcmds.h  fmcollect.c  fmcomma.c  fmconst.h  fmcpage.c  fmdefhea.c  fmditem.c  fmdo.c  fmdummy.c  fmdump.c  fmdv.c  fmelse.c  fmendlis.c  fmendta.c  fmep.c  fmevalex.c  fmfigure.c  fmflush.c  fmformat.c  fmgetpar.c  fmgetpts.c  fmgettok.c  fmgetval.c  (+58 more)
src/hfm/: CMakeLists.txt  fmaddtok.c  fmbd.c  fmbeglst.c  fmbox.c  fmbxend.c  fmbxst.c  fmcd.c  fmceject.c  fmcell.c  fmcenter.c  fmcmd.c  fmcolnotes.c  fmcss.c  fmditem.c  fmelse.c  fmendlis.c  fmestack.c  fmflush.c  fmhconst.h  fmheader.c  fmindent.c  fminit.c  fmjustif.c  fmline.c  fmlisti.c  fmll.c  fmmain.c  fmnofmt.c  fmpara.c  fmpflush.c  fmrconst.h  fmrglob.h  fmright.c  fmrunset.c  fmsectio.c  fmsetcol.c  fmsetfon.c  fmsetmar.c  fmsetx.c  (+11 more)
src/pfm/: .gitignore  CMakeLists.txt  afigettok.c  fmaddtok.c  fmasis.c  fmbd.c  fmbeglst.c  fmbox.c  fmbxend.c  fmbxst.c  fmccol.c  fmcd.c  fmceject.c  fmcmd.c  fmcolnotes.c  fmcpage.c  fmdefhea.c  fmditem.c  fmdummy.c  fmendlis.c  fmep.c  fmfigure.c  fmfloat_mar.c  fmflush.c  fmfmt.c  fmformat.c  fmgetpts.c  fmheader.c  fmimbed.c  fmindent.c  fminit.c  fmjustif.c  fmline.c  fmll.c  fmmain.c  fmnofmt.c  fmoneject.c  fmpflush.c  fmrfoot.c  fmrhead.c  (+26 more)
src/scripts/: txt2md
src/tfm/: CMakeLists.txt  fmaddtok.c  fmbd.c  fmbeglst.c  fmbxend.c  fmbxst.c  fmcell.c  fmcenter.c  fmcmd.c  fmcolnotes.c  fmditem.c  fmendlis.c  fmflush.c  fmheader.c  fmignore.c  fminit.c  fmjustif.c  fmline.c  fmlisti.c  fmmain.c  fmnofmt.c  fmpara.c  fmspace.c  fmtable.c  fmtr.c  hglobals.h  mkfile  tfmall.c  tfmproto.h
templates/: README  doc_start.im  hfmstart.im  manstart.im  markdown.im  master.mk  pfmstart.im  rfmstart.im  scd_start.im  startup.im  tfmstart.im
